--- a/menus/index.html
+++ b/menus/index.html
@@ -6,6 +6,22 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+<div class="dropdown-menu collapsed">
+    <button class="dropdown-button">
+        <svg width="24" height="24" version="1.1" xmlns="http://www.w3.org/2000/svg">
+            <line x1="0" x2="24" y1="5" y2="5" stroke="white" stroke-width="3"/>
+            <line x1="0" x2="24" y1="12" y2="12" stroke="white" stroke-width="3"/>
+            <line x1="0" x2="24" y1="19" y2="19" stroke="white" stroke-width="3"/>
+        </svg>
+    </button>
+    <div class="dropdown-content">
+        <a href="#">Element 1</a>
+        <a href="#">Element 2</a>
+        <a href="#">Element 3</a>
+    </div>
+</div>
+
 <script src="script.js"></script>
 </body>
 </html>
